--- a/products.html
+++ b/products.html
@@ -150,7 +150,7 @@
 			</a>			
 			<a href="./product.html">
 				<div class="product">
-					<img src="assets/fashionista in a museum (blue frame, blavk bg).jpg" alt="Product image's description">
+					<img src="assets/fashionista in a museum (blue frame, black bg).jpg" alt="Product image's description">
 					<p class="product-title">Product Name</p>
 					<div class="product-price-stars">
 						<p class="product-price">15.00</p>
