--- a/product.html
+++ b/product.html
@@ -149,7 +149,7 @@
 					<i class="fas fa-star"></i>
 				</div>
 				<p class="testimonial-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae excepturi obcaecati aperiam? Quisquam, voluptate.</p>
-				<img src="../website-online/Assets/My Art/Artwork - copyright/InShot_20240722_184856383.jpg" alt="Testimonial Images's description">
+				<img src="assets/calm ambience.jpg" alt="Testimonial Images's description">
 				<p class="testimonial-name">Name of Person</p>
 			</div>
 			<div class="testimonial">
