--- a/cart.html
+++ b/cart.html
@@ -91,7 +91,7 @@
 
                 <tr>
                     <td class="cart-img-name">
-                         <img src="assets/archer in a forest.jpg" alt="Archer in a forest">
+                         <img src="assets/archer in the forest.jpg" alt="Archer in the forest">
                          <div>
                              <p>Winter atmospheric coat</p>
                              <br>
