--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 				</ul>
 			</div>
 		</div>
-		<p>Designed & Developed by <a href="../website-online/index.html" target="_blank">Nabila Abubakar</a></p>
+		<p>Designed & Developed by <a href="https://beela303.github.io/QueenBeela" target="_blank">Nabila Abubakar</a></p>
 	</footer>
 		
 	<!-- js link -->
