--- a/contact.html
+++ b/contact.html
@@ -132,13 +132,13 @@
 				</ul>
 			</div>
 		</div>
-		<p>Designed & Developed by <a href="beela303.github.io/QueenBeela" target="_blank">Nabila Abubakar</a></p>
+		<p>Designed & Developed by <a href="https://beela303.github.io/QueenBeela" target="_blank">Nabila Abubakar</a></p>
 	</footer>
 
 		
 	<!-- js link -->
 	<script src="js\jquery.min.js"> </script>
-	<script src="./js/jquery.waypoints.min.js"> </script>
+	<script src="js/jquery.waypoints.min.js"> </script>
 	<script src="./js/typed.min.js"></script>
 	<script src="js\main.js"> </script>
 </body>
