--- a/product.html
+++ b/product.html
@@ -101,7 +101,7 @@
 			</div>
 			
 			<div class="header-img-list" id="img-slide">
-				<img src="fashionista in a museum (white bg).jpg" alt="Picture's description" class="header-img-list">
+				<img src="assets/fashionista in a museum (white bg).jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/brown aestheic.jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/fashionista in a museum (blue frame, white bg).jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/fashionista in a museum (pink frame, black bg).jpg" alt="Picture's description" class="header-img-list">
