--- a/product.html
+++ b/product.html
@@ -102,7 +102,7 @@
 			
 			<div class="header-img-list" id="img-slide">
 				<img src="assets/fashionista in a museum (white bg).jpg" alt="Picture's description" class="header-img-list">
-				<img src="assets/brown aestheic.jpg" alt="Picture's description" class="header-img-list">
+				<img src="assets/below the ocean.jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/fashionista in a museum (blue frame, white bg).jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/fashionista in a museum (pink frame, black bg).jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/fashionista in a museum (pink frame, white bg).jpg" alt="Picture's description" class="header-img-list">
@@ -110,7 +110,7 @@
 				<img src="assets/galactic ocean of dreams.jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/calm ambience.jpg" alt="Picture's description" class="header-img-list">
 				<img src="assets/hall of mirage.jpg" alt="Picture's description" class="header-img-list">
-				<img src="hall of mirage (border).jpg" alt="Picture's description" class="header-img-list">
+				<img src="assets/hall of mirage (border).jpg" alt="Picture's description" class="header-img-list">
 			</div>
 			<a href="./cart.html"><button>ADD TO CART</button></a>
 
