--- a/product.html
+++ b/product.html
@@ -228,7 +228,7 @@
 				</ul>
 			</div>
 		</div>
-		<p>Designed & Developed by <a href="https://beela303.github.io/QueenBeela" target="_blank">Nabila Abubakar</a></p>
+		<p>Designed & Developed by <a href="https://beela303.vercel.app/" target="_blank">Nabila Abubakar</a></p>
 	</footer>
 		
 	<!-- js link -->
